--- a/utilbox/pom.xml
+++ b/utilbox/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.h2linlin.lab</groupId>
-    <artifactId>h2linlin-lab-leetcode</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.h2linlin.dollhouse</groupId>
+    <artifactId>utilbox</artifactId>
+    <version>1.0.0</version>
 
     
 </project>
