--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.h2linlin</groupId>
-    <artifactId>dollhouse</artifactId>
+    <artifactId>lab</artifactId>
     <version>1.0.0</version>    <!--未来框架升级，具体项目可以选择依赖不同的平台版本版本 -->
 </project>
