--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,16 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
+            <version>1.18.12</version>
+        </dependency>
     </dependencies>
+
     <repositories>
         <repository>
             <id>aliyun</id>
